[package]
name        = "kxco-verify"
version     = "1.1.0"
edition     = "2021"
license     = "MIT"
description = "Receiver-side verifier for the KXCO hybrid HMAC + ML-DSA-65 webhook signature scheme"
homepage    = "https://kxco.ai"
repository  = "https://github.com/JackKXCO/kxco-post-quantum-verifiers"
keywords    = ["post-quantum", "ml-dsa", "dilithium", "webhook", "fips-204"]
categories  = ["cryptography"]
readme      = "README.md"

[dependencies]
hex          = "0.4"
hmac         = "0.13"
sha2         = "0.10"
subtle       = "2.5"
# ML-DSA-65 verification backend — pure-Rust FIPS 204 implementation
fips204      = "0.4"

[dev-dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
